--- a/templates/base.html
+++ b/templates/base.html
@@ -224,4 +224,4 @@
 
 
 
-<a href="https://www.zmrenwu.com/post/2/#" class="back-top" style="display: inline;"><i class="fa fa-arrow-up" aria-hidden="true"></i></a></body></html>
+<a href="#" class="back-top" style="display: inline;"><i class="fa fa-arrow-up" aria-hidden="true"></i></a></body></html>
