--- a/templates/base.html
+++ b/templates/base.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="{% static 'blog/css/modal.min.css' %}">
     <link rel="stylesheet" href="{% static 'blog/css/friendly.css' %}">
     <link rel="stylesheet" href="{% static 'blog/css/blog.css' %}">
-    <link rel="stylesheet" href="{% static 'blog/css/highlights/github.css' %}">
+    <!-- link rel="stylesheet" href="{% static 'blog/css/highlights/github.css' %}"-->
 
 
     <script src="{% static 'blog/js/push.js' %}"></script>
