--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -32,10 +32,10 @@
                     <button type="submit" class="btn btn-primary btn-block">登录</button>
                     <input type="hidden" name="next" value="{{ next }}"/>
                 </form>
-                <div class="flex-left top-gap text-small">
+                <!--div class="flex-left top-gap text-small">
                     <div class="unit-2-3"><span>没有账号？<a href="{% url 'users:register' %}?next={{ request.next }}">立即注册</a></span></div>
                     <div class="unit-1-3 flex-right"><span><a href="{% url 'password_reset' %}">忘记密码？</a></span></div>
-                </div>
+                </div-->
             </div>
         </div>
     </div>
