--- a/templates/base.html
+++ b/templates/base.html
@@ -59,6 +59,10 @@
         span.highlighted {
             color: red !important;
         }
+        article code {
+            white-space: normal;
+            word-break: break-all;
+        }
     </style>
 </head>
 
