--- a/templates/base.html
+++ b/templates/base.html
@@ -60,8 +60,8 @@
             color: red !important;
         }
         article code {
-            white-space: normal;
-            word-break: break-all;
+            white-space: pre-wrap;
+            word-wrap: break-word;
         }
     </style>
 </head>
